--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,10 @@
 .home-wrapper {
   background-image: url("../../assets/img/homeBackground.png");
 }
+.cardsWrapper {
+  max-width: 790px;
+  width: 100%;
+}
+.home-wrapper > .container {
+  max-width: 1600px;
+}
