--- a/src/pages/PublicProfile/public.css
+++ b/src/pages/PublicProfile/public.css
@@ -1,3 +1,8 @@
 .public-wrapper {
   background-image: url("../../assets/img/personalBackground.png");
 }
+.min-public-wrapper {
+  background-image: url("../../assets/img/minPersonalBackground.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
