--- a/src/pages/SingleProjectOwner/single.css
+++ b/src/pages/SingleProjectOwner/single.css
@@ -1,3 +1,8 @@
 .single-wrapper {
   background-image: url("../../assets/img/singleProjectBackground.png");
 }
+.min-single-wrapper {
+  background-image: url("../../assets/img/minSingleProjectBackground.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
